@startuml

title __ALGORITHM's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      abstract class es.ull.patrones.algorithm.DivideConqTemplate {
          + solve()
          {abstract} # combine()
          {abstract} # decompose()
          {abstract} # isSimple()
          {abstract} # simplySolve()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      class es.ull.patrones.algorithm.MergeSort {
          + MergeSort()
          # combine()
          # decompose()
          # isSimple()
          # simplySolve()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      class es.ull.patrones.algorithm.QuickSort {
          + QuickSort()
          # combine()
          # decompose()
          # isSimple()
          # simplySolve()
      }
    }
  }
  

  es.ull.patrones.algorithm.MergeSort -up-|> es.ull.patrones.algorithm.DivideConqTemplate
  es.ull.patrones.algorithm.QuickSort -up-|> es.ull.patrones.algorithm.DivideConqTemplate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
